--- a/add index.html
+++ b/add index.html
@@ -5,14 +5,46 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Any & All</title>
     <style>
-      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin:0; }
-      header { padding: 56px 20px; text-align:center; }
-      h1 { font-size: clamp(28px, 4vw, 44px); margin: 0 0 8px; }
-      p.lead { font-size: clamp(16px, 2.2vw, 20px); color:#555; margin:0; }
-      main { max-width: 920px; margin: 24px auto; padding: 0 20px 48px; line-height:1.55; color:#222; }
-      .card { border:1px solid #eee; border-radius:16px; padding:24px; margin-top:16px; box-shadow: 0 2px 12px rgba(0,0,0,.04); }
-      a { color: inherit; }
-      footer { text-align:center; padding: 32px 12px; color:#777; border-top:1px solid #f1f1f1; }
+      body {
+        font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+        margin: 0;
+      }
+      header {
+        padding: 56px 20px;
+        text-align: center;
+      }
+      h1 {
+        font-size: clamp(28px, 4vw, 44px);
+        margin: 0 0 8px;
+      }
+      p.lead {
+        font-size: clamp(16px, 2.2vw, 20px);
+        color: #555;
+        margin: 0;
+      }
+      main {
+        max-width: 920px;
+        margin: 24px auto;
+        padding: 0 20px 48px;
+        line-height: 1.55;
+        color: #222;
+      }
+      .card {
+        border: 1px solid #eee;
+        border-radius: 16px;
+        padding: 24px;
+        margin-top: 16px;
+        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
+      }
+      a {
+        color: inherit;
+      }
+      footer {
+        text-align: center;
+        padding: 32px 12px;
+        color: #777;
+        border-top: 1px solid #f1f1f1;
+      }
     </style>
   </head>
   <body>
@@ -24,14 +56,17 @@
       <div class="card">
         <h2>Kontakt</h2>
         <p>
-          Mail: <a href="mailto:info@anyandall.dk">info@anyandall.dk</a><br/>
-          Telefon: <a href="tel:+45XXXXXXXX">+45 XX XX XX XX</a>
+          Mail: <a href="mailto:info@anyandall.dk">info@anyandall.dk</a><br />
+          Telefon: <a href="tel:+4571990000">+45 71 99 00 00</a>
         </p>
       </div>
 
       <div class="card">
         <h2>Hvad er på vej?</h2>
-        <p>Ny hjemmeside, integreret med vores IVR (Laura), klare CTA’er og bedre performance.</p>
+        <p>
+          Ny hjemmeside, integreret med vores AI-receptionist Laura og bedre
+          kundeoplevelse.
+        </p>
       </div>
     </main>
     <footer>© Any & All</footer>
