--- a/index.html
+++ b/index.html
@@ -1,63 +1,72 @@
-Skip to content
-Navigation Menu
-support268
-anyandall-ai
+<!doctype html>
+<html lang="da">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Any & All — AI-drevet kunderejse</title>
+  <meta name="description" content="Any & All hjælper virksomheder med Twilio, IVR og AI-assisteret kundeservice." />
+  <style>
+    :root { --bg:#ffffff; --fg:#0b1426; --muted:#5b6473; --line:#e9edf3; }
+    * { box-sizing: border-box; }
+    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; background:var(--bg); color:var(--fg); }
+    header { padding:64px 24px 32px; text-align:center; border-bottom:1px solid var(--line); }
+    .logo { font-weight:700; letter-spacing:.2px; font-size:22px; }
+    .logo b { font-weight:800; }
+    .hero { max-width:1000px; margin:32px auto 0; padding:0 24px; text-align:center; }
+    .hero h1 { font-size:42px; line-height:1.1; margin:0 0 12px; }
+    .hero p { color:var(--muted); margin:0 auto 20px; max-width:720px; }
+    .cta { display:inline-block; padding:12px 18px; border:1px solid var(--line); border-radius:12px; text-decoration:none; }
+    .cta:hover { background:#f7f9fc; }
+    main { max-width:1100px; margin:32px auto; padding:0 24px; }
+    .grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(240px,1fr)); gap:16px; }
+    .card { border:1px solid var(--line); border-radius:16px; padding:18px; }
+    .card h3 { margin:0 0 6px; font-size:18px; }
+    .card p { margin:0; color:var(--muted); }
+    section h2 { font-size:26px; margin:32px 0 12px; }
+    footer { border-top:1px solid var(--line); text-align:center; padding:28px; color:var(--muted); font-size:14px; }
+    .contact { text-align:center; margin:24px 0 8px; }
+    .nowrap { white-space: nowrap; }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="logo">Any <b>&amp;</b> All</div>
+    <div class="hero">
+      <h1>Professionel IVR og AI-kundeservice</h1>
+      <p>Vi bygger smarte opkaldsflows i Twilio Studio, dansk TTS (“Laura”) og integrationer, så dine kunder hurtigt rammer det rigtige svar eller den rigtige person.</p>
+      <a class="cta" href="mailto:info@anyandall.dk">Kontakt os</a>
+    </div>
+  </header>
 
-Type / to search
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-Settings
-Settings: support268/anyandall-ai
-Access
-Code and automation
-Security
-Integrations
-Environments / Configure github-pages
-Deployment protection rules
-Configure reviewers, timers, and custom rules that must pass before deployments to this environment can proceed.
+  <main>
+    <section>
+      <h2>Hvad vi hjælper med</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Twilio Studio</h3>
+          <p>IVR-flows, DTMF/speech routing, køer og status callbacks.</p>
+        </div>
+        <div class="card">
+          <h3>Dansk stemme</h3>
+          <p>Naturlig dansk TTS (“Laura”), brandet sprog & tone.</p>
+        </div>
+        <div class="card">
+          <h3>Integrationer</h3>
+          <p>CRM, helpdesk og dataopsamling fra opkald.</p>
+        </div>
+        <div class="card">
+          <h3>Hurtig go-live</h3>
+          <p>Fra koncept til drift med minimal friktion.</p>
+        </div>
+      </div>
+    </section>
 
-Required reviewers
-Specify people or teams that may approve workflow runs when they access this environment.
+    <section class="contact">
+      <h2>Skal vi tage en snak?</h2>
+      <p>Skriv til <a href="mailto:info@anyandall.dk" class="nowrap">info@anyandall.dk</a></p>
+    </section>
+  </main>
 
-Wait timer
-Set an amount of time to wait before allowing deployments to proceed.
-
-Enable custom rules with GitHub Apps Preview
-
-Learn about existing apps or create your own protection rules so you can deploy with confidence.
-
-Allow administrators to bypass configured protection rules
-Deployment branches and tags
-Limit which branches and tags can deploy to this environment based on rules or naming patterns.
-
-1 branch and 0 tags allowed
-main
-Currently applies to 1 branch
-Add deployment branch or tag rule
-Environment secrets
-Secrets are encrypted environment variables. They are accessible only by GitHub Actions in the context of this environment by using the secret context.
-This environment has no secrets.
-
-Environment variables
-Variables are used for non-sensitive configuration data. They are accessible only by GitHub Actions in the context of this environment by using the variable context.
-This environment has no variables.
-
-Footer
-© 2025 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
-Status
-Community
-Docs
-Contact
-Manage cookies
-Do not share my personal information
-Configure environment github-pages · support268/anyandall-ai
+  <footer>© Any &amp; All</footer>
+</body>
+</html>
