--- a/index.html
+++ b/index.html
@@ -2,71 +2,148 @@
 <html lang="da">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Any & All — AI-drevet kunderejse</title>
-  <meta name="description" content="Any & All hjælper virksomheder med Twilio, IVR og AI-assisteret kundeservice." />
-  <style>
-    :root { --bg:#ffffff; --fg:#0b1426; --muted:#5b6473; --line:#e9edf3; }
-    * { box-sizing: border-box; }
-    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; background:var(--bg); color:var(--fg); }
-    header { padding:64px 24px 32px; text-align:center; border-bottom:1px solid var(--line); }
-    .logo { font-weight:700; letter-spacing:.2px; font-size:22px; }
-    .logo b { font-weight:800; }
-    .hero { max-width:1000px; margin:32px auto 0; padding:0 24px; text-align:center; }
-    .hero h1 { font-size:42px; line-height:1.1; margin:0 0 12px; }
-    .hero p { color:var(--muted); margin:0 auto 20px; max-width:720px; }
-    .cta { display:inline-block; padding:12px 18px; border:1px solid var(--line); border-radius:12px; text-decoration:none; }
-    .cta:hover { background:#f7f9fc; }
-    main { max-width:1100px; margin:32px auto; padding:0 24px; }
-    .grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(240px,1fr)); gap:16px; }
-    .card { border:1px solid var(--line); border-radius:16px; padding:18px; }
-    .card h3 { margin:0 0 6px; font-size:18px; }
-    .card p { margin:0; color:var(--muted); }
-    section h2 { font-size:26px; margin:32px 0 12px; }
-    footer { border-top:1px solid var(--line); text-align:center; padding:28px; color:var(--muted); font-size:14px; }
-    .contact { text-align:center; margin:24px 0 8px; }
-    .nowrap { white-space: nowrap; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Any & All — AI-telefoni der omstiller rigtigt første gang</title>
+  <meta name="description" content="Any & All: Dansk AI-receptionist, der tager telefonen, forstår henvendelsen og omstiller til den rigtige person. Hurtigt, venligt og professionelt." />
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="preload" href="styles.css" as="style" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
-    <div class="logo">Any <b>&amp;</b> All</div>
-    <div class="hero">
-      <h1>Professionel IVR og AI-kundeservice</h1>
-      <p>Vi bygger smarte opkaldsflows i Twilio Studio, dansk TTS (“Laura”) og integrationer, så dine kunder hurtigt rammer det rigtige svar eller den rigtige person.</p>
-      <a class="cta" href="mailto:info@anyandall.dk">Kontakt os</a>
+  <header class="site-header">
+    <div class="container">
+      <a class="brand" href="/">
+        <span class="logo">Any &amp; All</span>
+      </a>
+      <nav class="nav">
+        <a href="#how" class="nav-link">Sådan virker det</a>
+        <a href="#features" class="nav-link">Fordele</a>
+        <a href="#contact" class="nav-btn">Book demo</a>
+      </nav>
     </div>
   </header>
 
   <main>
-    <section>
-      <h2>Hvad vi hjælper med</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>Twilio Studio</h3>
-          <p>IVR-flows, DTMF/speech routing, køer og status callbacks.</p>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container hero-grid">
+        <div class="hero-copy">
+          <h1>AI-receptionist på dansk<br />der omstiller rigtigt — første gang</h1>
+          <p class="lede">
+            “Laura” tager telefonen, forstår hvad kunden vil, og omstiller til salg, support eller den rette person.
+            Venligt, professionelt og 100% på dansk.
+          </p>
+          <div class="cta-row">
+            <a class="btn btn-primary" href="mailto:hello@anyandall.dk?subject=Book%20demo%20af%20Laura">Book en demo</a>
+            <a class="btn btn-ghost" href="#how">Se hvordan</a>
+          </div>
+          <ul class="trust">
+            <li>⚡ Live IVR i Twilio Studio</li>
+            <li>🎯 Intelligent omstilling</li>
+            <li>🔒 GDPR-first</li>
+          </ul>
         </div>
-        <div class="card">
-          <h3>Dansk stemme</h3>
-          <p>Naturlig dansk TTS (“Laura”), brandet sprog & tone.</p>
-        </div>
-        <div class="card">
-          <h3>Integrationer</h3>
-          <p>CRM, helpdesk og dataopsamling fra opkald.</p>
-        </div>
-        <div class="card">
-          <h3>Hurtig go-live</h3>
-          <p>Fra koncept til drift med minimal friktion.</p>
+        <div class="hero-card" aria-label="Laura forhåndsvisning">
+          <div class="phone">
+            <div class="bar"></div>
+            <div class="conversation">
+              <div class="bubble in">Hej, du taler med Laura hos Any &amp; All. Tast 1 for salg, 2 for support.</div>
+              <div class="bubble out">*taster 1*</div>
+              <div class="bubble in">Tak. Jeg omstiller dig til salg nu.</div>
+            </div>
+          </div>
+          <p class="caption">Naturlig dansk tale, DTMF, og omstilling via Twilio.</p>
         </div>
       </div>
     </section>
 
-    <section class="contact">
-      <h2>Skal vi tage en snak?</h2>
-      <p>Skriv til <a href="mailto:info@anyandall.dk" class="nowrap">info@anyandall.dk</a></p>
+    <!-- How it works -->
+    <section id="how" class="section">
+      <div class="container">
+        <h2>Sådan virker det</h2>
+        <div class="cards">
+          <article class="card">
+            <h3>1. Opkald</h3>
+            <p>Kunden ringer til jeres nummer. Laura tager den med jeres brandede velkomst.</p>
+          </article>
+          <article class="card">
+            <h3>2. Forstår &amp; guider</h3>
+            <p>DTMF (“tryk 1/2”) og/eller taleforståelse matcher henvendelsen til rigtige kø/medarbejder.</p>
+          </article>
+          <article class="card">
+            <h3>3. Omstiller rigtigt</h3>
+            <p>Laura omstiller – og kan logge hændelser til rapportering og forbedringer.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Features -->
+    <section id="features" class="section section-alt">
+      <div class="container">
+        <h2>Hvorfor Any &amp; All?</h2>
+        <div class="feature-grid">
+          <div>
+            <h4>Bedre kundeoplevelse</h4>
+            <p>Hurtig, høflig og konsistent – selv i spidsbelastning.</p>
+          </div>
+          <div>
+            <h4>Mindre spildtid</h4>
+            <p>Færre fejlomstilling­er og afbrudte opkald.</p>
+          </div>
+          <div>
+            <h4>Dansk sprog, dansk kontekst</h4>
+            <p>Stemmer og prompts skræddersyes til jeres tone-of-voice.</p>
+          </div>
+          <div>
+            <h4>Skalerbart</h4>
+            <p>Starter simpelt (tryk 1/2), kan udvides med tale-AI og CRM-integration.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonials (placeholder) -->
+    <section class="section">
+      <div class="container">
+        <h2>Hvad siger kunderne?</h2>
+        <div class="quotes">
+          <blockquote>“Laura reducerede ventetiden markant og gav os ro i spidsbelastningen.” <span>— Kunde, SaaS</span></blockquote>
+          <blockquote>“Vi lignede pludselig en virksomhed 10x større.” <span>— Kunde, konsulenthus</span></blockquote>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="section section-cta">
+      <div class="container">
+        <h2>Klar til at prøve Laura?</h2>
+        <p>Book en 20-min. demo – vi viser opsætningen og tilpasser til jeres behov.</p>
+        <a class="btn btn-primary" href="mailto:hello@anyandall.dk?subject=Book%20demo%20af%20Laura">Book demo</a>
+      </div>
     </section>
   </main>
 
-  <footer>© Any &amp; All</footer>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <div class="logo-sm">Any &amp; All</div>
+        <p class="muted">AI-telefoni der omstiller rigtigt første gang.</p>
+      </div>
+      <ul>
+        <li><a href="#how">Sådan virker det</a></li>
+        <li><a href="#features">Fordele</a></li>
+        <li><a href="mailto:hello@anyandall.dk">hello@anyandall.dk</a></li>
+        <!-- Tilføj telefon senere når vi har endeligt nummer -->
+      </ul>
+      <div class="legal muted">
+        <div>© <span id="y"></span> Any &amp; All</div>
+        <div>CVR: [indsæt]</div>
+      </div>
+    </div>
+  </footer>
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
