--- a/index.html
+++ b/index.html
@@ -3,145 +3,53 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Any & All — AI-telefoni der omstiller rigtigt første gang</title>
-  <meta name="description" content="Any & All: Dansk AI-receptionist, der tager telefonen, forstår henvendelsen og omstiller til den rigtige person. Hurtigt, venligt og professionelt." />
+  <title>Any and All — Dansk AI-telefoni der omstiller rigtigt første gang</title>
+  <meta name="description" content="Any and All: Dansk AI-receptionist, der tager telefonen, forstår henvendelsen og omstiller til den rigtige person. Venligt, professionelt og 100% dansk." />
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="preload" href="styles.css" as="style" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="brand" href="/">
-        <span class="logo">Any &amp; All</span>
-      </a>
+      <div class="brand">Any and All</div>
       <nav class="nav">
-        <a href="#how" class="nav-link">Sådan virker det</a>
-        <a href="#features" class="nav-link">Fordele</a>
+        <a href="#how">Sådan virker det</a>
+        <a href="#features">Fordele</a>
         <a href="#contact" class="nav-btn">Book demo</a>
       </nav>
     </div>
   </header>
 
   <main>
-    <!-- Hero -->
     <section class="hero">
-      <div class="container hero-grid">
-        <div class="hero-copy">
-          <h1>AI-receptionist på dansk<br />der omstiller rigtigt — første gang</h1>
-          <p class="lede">
-            “Laura” tager telefonen, forstår hvad kunden vil, og omstiller til salg, support eller den rette person.
-            Venligt, professionelt og 100% på dansk.
-          </p>
-          <div class="cta-row">
-            <a class="btn btn-primary" href="mailto:hello@anyandall.dk?subject=Book%20demo%20af%20Laura">Book en demo</a>
-            <a class="btn btn-ghost" href="#how">Se hvordan</a>
-          </div>
-          <ul class="trust">
-            <li>⚡ Live IVR i Twilio Studio</li>
-            <li>🎯 Intelligent omstilling</li>
-            <li>🔒 GDPR-first</li>
-          </ul>
-        </div>
-        <div class="hero-card" aria-label="Laura forhåndsvisning">
-          <div class="phone">
-            <div class="bar"></div>
-            <div class="conversation">
-              <div class="bubble in">Hej, du taler med Laura hos Any &amp; All. Tast 1 for salg, 2 for support.</div>
-              <div class="bubble out">*taster 1*</div>
-              <div class="bubble in">Tak. Jeg omstiller dig til salg nu.</div>
-            </div>
-          </div>
-          <p class="caption">Naturlig dansk tale, DTMF, og omstilling via Twilio.</p>
-        </div>
+      <div class="container">
+        <h1>AI-receptionist på dansk, der omstiller rigtigt — første gang</h1>
+        <p>“Laura” tager telefonen, forstår hvad kunden vil, og omstiller til salg, support eller den rette person.</p>
+        <a class="btn" href="mailto:hello@anyandall.dk?subject=Book%20demo">Book demo</a>
       </div>
     </section>
 
-    <!-- How it works -->
     <section id="how" class="section">
       <div class="container">
         <h2>Sådan virker det</h2>
-        <div class="cards">
-          <article class="card">
-            <h3>1. Opkald</h3>
-            <p>Kunden ringer til jeres nummer. Laura tager den med jeres brandede velkomst.</p>
-          </article>
-          <article class="card">
-            <h3>2. Forstår &amp; guider</h3>
-            <p>DTMF (“tryk 1/2”) og/eller taleforståelse matcher henvendelsen til rigtige kø/medarbejder.</p>
-          </article>
-          <article class="card">
-            <h3>3. Omstiller rigtigt</h3>
-            <p>Laura omstiller – og kan logge hændelser til rapportering og forbedringer.</p>
-          </article>
-        </div>
+        <p>1️⃣ Kunden ringer → 2️⃣ Laura forstår → 3️⃣ Rigtigt omstillet.</p>
       </div>
     </section>
 
-    <!-- Features -->
-    <section id="features" class="section section-alt">
+    <section id="contact" class="section">
       <div class="container">
-        <h2>Hvorfor Any &amp; All?</h2>
-        <div class="feature-grid">
-          <div>
-            <h4>Bedre kundeoplevelse</h4>
-            <p>Hurtig, høflig og konsistent – selv i spidsbelastning.</p>
-          </div>
-          <div>
-            <h4>Mindre spildtid</h4>
-            <p>Færre fejlomstilling­er og afbrudte opkald.</p>
-          </div>
-          <div>
-            <h4>Dansk sprog, dansk kontekst</h4>
-            <p>Stemmer og prompts skræddersyes til jeres tone-of-voice.</p>
-          </div>
-          <div>
-            <h4>Skalerbart</h4>
-            <p>Starter simpelt (tryk 1/2), kan udvides med tale-AI og CRM-integration.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Testimonials (placeholder) -->
-    <section class="section">
-      <div class="container">
-        <h2>Hvad siger kunderne?</h2>
-        <div class="quotes">
-          <blockquote>“Laura reducerede ventetiden markant og gav os ro i spidsbelastningen.” <span>— Kunde, SaaS</span></blockquote>
-          <blockquote>“Vi lignede pludselig en virksomhed 10x større.” <span>— Kunde, konsulenthus</span></blockquote>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="section section-cta">
-      <div class="container">
-        <h2>Klar til at prøve Laura?</h2>
-        <p>Book en 20-min. demo – vi viser opsætningen og tilpasser til jeres behov.</p>
-        <a class="btn btn-primary" href="mailto:hello@anyandall.dk?subject=Book%20demo%20af%20Laura">Book demo</a>
+        <h2>Kontakt os</h2>
+        <p>hello@anyandall.dk</p>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container footer-grid">
-      <div>
-        <div class="logo-sm">Any &amp; All</div>
-        <p class="muted">AI-telefoni der omstiller rigtigt første gang.</p>
-      </div>
-      <ul>
-        <li><a href="#how">Sådan virker det</a></li>
-        <li><a href="#features">Fordele</a></li>
-        <li><a href="mailto:hello@anyandall.dk">hello@anyandall.dk</a></li>
-        <!-- Tilføj telefon senere når vi har endeligt nummer -->
-      </ul>
-      <div class="legal muted">
-        <div>© <span id="y"></span> Any &amp; All</div>
-        <div>CVR: [indsæt]</div>
-      </div>
+    <div class="container">
+      <p>© <span id="y"></span> Any and All — AI-telefoni</p>
     </div>
   </footer>
+
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
   </script>
