--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <div class="brand">Any and All</div>
+      <div class="brand">Any &amp; All</div>
       <nav class="nav">
         <a href="#how">Sådan virker det</a>
         <a href="#features">Fordele</a>
